--- a/style.css
+++ b/style.css
@@ -11,4 +11,4 @@ body{
      margin-top: 80px;
      margin-bottom: 80px;
      display: flex;
-     justify-content: center;
+     justify-content: center; g
